# SEND-EMAIL-DJANGO

./: .env  .gitignore  README.md  manage.py  pyproject.toml
EmailSMTP/: asgi.py  settings.py  urls.py  wsgi.py
customAdmin/: admin.py  forms.py  models.py  urls.py  views.py
customAdmin/migrations/: 0001_initial.py  0002_auto_20210324_0851.py
customAdmin/templates/customAdmin/: main.html  message.html  success.html
sendanemail/: apps.py  forms.py  urls.py  views.py
sendanemail/templates/sendanemail/: index.html
