[tool.poetry]
name = "emailsmtp"
version = "0.1.0"
description = ""
authors = ["Hoang Nguyen <viethoangnguyenle@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
python-dotenv = "^0.15.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
